# teaching

./: .gitignore  breaking_pass_value.py
.github/workflows/: deploy-dev.yml
SQS/: Q_A.md
hello_world_deployment/: Dockerfile  README.md  deploy-dev.yml  docker-compose.yml  issues.md  main.py
hello_world_deployment/.github/: deploy-dev.yml
hello_world_deployment/backend/: .dockerignore  .gitignore  main.py  pyproject.toml
hello_world_deployment/frontend/: Dockerfile  index.html  package.json  vite.config.js
hello_world_deployment/frontend/src/: App.svelte
single_challenges/: draft  find_missing.py
threading_multiprocessing/: async_aiohttp_test1.py  async_concurrent_test1.py  async_sequential_test1.py  coroutines.py  httpx_test1.py  multiprocessing_test1.py  multiprocessing_test2.py  subprocess_test1.py
